Icons added to history

--- a/src/dotnet/APIView/APIViewWeb/Client/css/pages/review.scss
+++ b/src/dotnet/APIView/APIViewWeb/Client/css/pages/review.scss
@@ -65,3 +65,14 @@
     color: var(--success-color);
     font-size: medium;
 }
+
+
+/*#approval-list-group #approval-list-group-item {
+    list-style-type: none !important;
+    padding-left: 0;
+}*/
+
+
+.bi bi-plus-circle-fill created {
+    color: darkorange;
+}
