Reduced history text size and changed datetime display to hours/weeks ago

--- a/src/dotnet/APIView/APIViewWeb/Client/css/pages/review.scss
+++ b/src/dotnet/APIView/APIViewWeb/Client/css/pages/review.scss
@@ -66,8 +66,6 @@
     font-size: medium;
 }
 
-
-
 .approval-list-group {
     padding-left: 0;
 }
@@ -78,6 +76,8 @@
 
 .revision-info {
     display: inline-block;
+    font-size: 13px;
+    padding-left: 5px;
 }
 
 .created {
@@ -101,5 +101,5 @@
 }
 
 .status-icon {
-    font-size: 21px;
+    font-size: 18px;
 }
