"Stashed changes applied"
GET request, service method functioning for Associated PRs

GET request, service method functioning for Associated PRs, UI up next

Get Associated Pull Requests are being gotten and rendered. Blocked on how to show element conditionally

Get Associated PRs functioning but with limited testing

Get associated PRs refactored, functioning

reverted change to method done for testing

Made recommended changes

--- a/src/dotnet/APIView/ClientSPA/src/app/_components/review-page-options/review-page-options.component.html
+++ b/src/dotnet/APIView/ClientSPA/src/app/_components/review-page-options/review-page-options.component.html
@@ -48,6 +48,16 @@
     </ul>
 </app-page-options-section>
 
+<app-page-options-section *ngIf="activeAPIRevision?.apiRevisionType === 'pullRequest'" sectionName="Associated Pull Requests">
+    <ul class="list-group">
+        <li *ngFor="let prData of associatedPRs" class="list-group-item">
+            <a href="https://github.com/{{prData.repoName}}/pull/{{prData.prNumber}}" target="_blank">
+                {{ prData.repoName }}/{{ prData.prNumber }}
+            </a>
+        </li>
+    </ul>
+</app-page-options-section>
+
 <app-page-options-section sectionName="Page Settings">
     <ul class="list-group">
         <li class="list-group-item">
