--- a/src/dotnet/APIView/ClientSPA/src/app/_components/review-page/review-page.component.html
+++ b/src/dotnet/APIView/ClientSPA/src/app/_components/review-page/review-page.component.html
@@ -46,6 +46,7 @@
                             [conversiationInfo]="conversiationInfo"
                             [hasFatalDiagnostics]="hasFatalDiagnostics"
                             [hasHiddenAPIs]="hasHiddenAPIs"
+                            [associatedPRs]="associatedPRs"
                             (showSystemCommentsEmitter)="handleShowSystemCommentsEmitter($event)"
                             (showDocumentationEmitter)="handleShowDocumentationEmitter($event)"
                             (showCommentsEmitter)="handleShowCommentsEmitter($event)"
