--- a/src/dotnet/APIView/ClientSPA/src/app/_components/review-page/review-page.component.html
+++ b/src/dotnet/APIView/ClientSPA/src/app/_components/review-page/review-page.component.html
@@ -47,7 +47,7 @@
                             [review]="review"
                             [activeAPIRevision]="activeAPIRevision"
                             [diffAPIRevision]="diffAPIRevision"
-                            [preferedApprovers]="preferedApprovers"
+                            [preferredApprovers]="preferredApprovers"
                             [hasFatalDiagnostics]="hasFatalDiagnostics"
                             [hasActiveConversation]="hasActiveConversation"
                             [hasHiddenAPIs]="hasHiddenAPIs"
